--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -21,6 +21,12 @@
   a {
     @apply text-blue-800 underline;
   }
+  ol {
+    @apply list-decimal list-inside text-justify
+  }
+  ul {
+    @apply list-disc list-inside text-justify
+  }
 }
 
 
