--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -16,7 +16,7 @@
     @apply text-xl font-ubuntu;
   }
   p {
-    @apply text-lg font-kanit;
+    @apply text-2xl font-kanit mb-10;
   }
   a {
     @apply text-blue-800 underline;
