--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,6 +6,16 @@
 
 
 @layer base {
+
+  .font-outline-1 {
+    -webkit-text-stroke: 1px white;
+  }
+  .font-outline-2 {
+    -webkit-text-stroke: 2px white;
+  }
+  .font-outline-4 {
+    -webkit-text-stroke: 4px white;
+  }
   h1 {
     @apply text-5xl sm:text-8xl text-center font-tourney font-bold text-black;
   }
