--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,14 +6,23 @@
 
 @layer base {
 
-  .font-outline-1 {
+  .font-outline-1-white {
     -webkit-text-stroke: 1px white;
   }
-  .font-outline-2 {
+  .font-outline-2-white {
     -webkit-text-stroke: 2px white;
   }
-  .font-outline-4 {
+  .font-outline-4-white {
     -webkit-text-stroke: 4px white;
+  }
+  .font-outline-1-black {
+    -webkit-text-stroke: 1px black;
+  }
+  .font-outline-2-black {
+    -webkit-text-stroke: 2px black;
+  }
+  .font-outline-4-black {
+    -webkit-text-stroke: 4px black;
   }
   h1 {
     @apply text-5xl sm:text-8xl text-center font-tourney font-bold text-black;
