--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Anton&family=Archivo+Black&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik+Mono+One&family=Rubik+Vinyl&family=Tourney:ital,wght@0,100..900;1,100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Archivo+Black&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=League+Spartan:wght@100..900&family=Rubik+Mono+One&family=Rubik+Vinyl&family=Tourney:ital,wght@0,100..900;1,100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -27,6 +27,18 @@
   .font-outline-4-black {
     -webkit-text-stroke: 4px black;
   }
+  .font-outline-1-green-800 {
+    -webkit-text-stroke: 1px #166534;
+  }
+  .font-outline-2-green-800 {
+    -webkit-text-stroke: 2px #166534;
+  }
+  .font-outline-2-red-800 {
+    -webkit-text-stroke: 2px #991b1b;
+  }
+  .font-outline-4-red-800 {
+    -webkit-text-stroke: 4px #991b1b;
+  }
   h1 {
     @apply text-5xl sm:text-8xl text-center font-tourney font-bold text-black;
   }
@@ -49,6 +61,7 @@
     @apply list-disc list-inside text-justify;
   }
 }
+
 
 
 /* html {
