subscribe form background

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -42,6 +42,9 @@
   .font-outline-4-red-800 {
     -webkit-text-stroke: 4px #991b1b;
   }
+  .font-outline-2-red-600 {
+    -webkit-text-stroke: 2px #dc2626;
+  }
   h1 {
     @apply text-5xl sm:text-8xl text-center font-tourney font-bold text-black;
   }
