--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -39,6 +39,9 @@
   .font-outline-2-red-800 {
     -webkit-text-stroke: 2px #991b1b;
   }
+  .font-outline-3-red-800 {
+    -webkit-text-stroke: 3px #991b1b;
+  }
   .font-outline-4-red-800 {
     -webkit-text-stroke: 4px #991b1b;
   }
